# mv-trading

mv-trading/: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
mv-trading/trd/: 1_predict_hotel_cancellation.ipynb  2_delta_quality_2_sol.py  3_get_vote_count.py  3_get_vote_count_sol.py  4_employee_efficiency_SOL.sql  5_pairs_trading_sol.py  delta_quality.py
