[tool.poetry]
name = "trd"
version = "0.1.0"
description = ""
authors = ["Tomas Fonseca <tdafonseca@schubergphilis.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
pandas = "^1.3.3"
notebook = "^6.4.3"
scikit-learn = "^1.2.2"
jupyter = "^1.0.0"
ipython = ">=8.0,<8.13"
category-encoders = "^2.6.0"
pre-commit = "^3.2.2"
numpy = "^1.24.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
